# python-datascience-esst-2260513

./: pyproject.toml
Kap1/: Arbeitsverzeichnis.ipynb  Beispiel1.ipynb
Kap2/: DataFrameObjekte.ipynb  DataFrameObjekte2.ipynb  DateiLesen.ipynb  DateiLesenCSV.ipynb  DateiLesenCSV2DataFrame.ipynb  SeriesObjekte.ipynb  SeriesObjekte2.ipynb  SeriesObjekte3.ipynb  SkalareVergleiche.ipynb  WerteSetzen.ipynb
Kap3/: FehlendeDatenGrundstruktur.ipynb  FehlendeWerteFiltern.ipynb  FehlendeWerteFuellen.ipynb  FehlendeWerteFuellen2.ipynb  FehlendeWerteZaehlen.ipynb  IsNull.ipynb  Redundanzen.ipynb
Kap4/: Gruppieren.ipynb  Hinzufuegen.ipynb  Loeschen.ipynb  Sortieren.ipynb  Verbinden.ipynb
Kap5/: BeschriftungenAnmerkungen.ipynb  DiagrammeFormatieren.ipynb  DiagrammeFormatieren4.ipynb  DiagrammeSpeichern.ipynb  DiagrammeStyle.ipynb  Diagrammeformatieren2.ipynb  Diagrammeformatieren3.ipynb  EinfacheBalkenDiagramme.ipynb  EinfacheLinienDiagramme.ipynb  KreisDiagramme.ipynb  LinienDiagrammeSubset.ipynb  Magie.ipynb  Unterdiagramme.ipynb  Zeitserien.ipynb
Kap6/: Histogramm.ipynb  HistogrammSeaborn.ipynb  Kastengrafik.ipynb  Streudiagramm.ipynb
Kap7/: Arrays mit Numpy.ipynb  Basismathematik und Statistik.ipynb  Kategorien.ipynb  Kreuztabellen.ipynb
Some Jupyter Notebooks/: HelloJupyter.ipynb
